# amundsen

./: .dockerignore  Dockerfile.frontend.local  Dockerfile.frontend.public  Dockerfile.metadata.public  Dockerfile.testdata.public  docker-amundsen.yml  pyproject.toml  requirements-common.txt
amundsen-kube-helm/: install.sh  pod-testdata.yaml
amundsen-kube-helm/templates/helm/: Chart.yaml  values.yaml
amundsen-kube-helm/templates/helm/templates/: deployment-frontend.yaml  deployment-neo4j.yaml  deployment-search.yaml  pvc-neo4j.yaml  service-frontend.yaml  service-metadata.yaml  service-neo4j.yaml  service-search.yaml
databuilder/example/sample_data/: sample_user.csv
frontend/: .env  requirements.txt
frontend/amundsen_application/api/search/: v1.py
frontend/amundsen_application/api/utils/: search_utils.py
frontend/amundsen_application/static/: package-lock.json  package.json
frontend/amundsen_application/static/css/: _layouts.scss  _variables-default.scss
frontend/amundsen_application/static/js/components/Alert/: Alert.tsx  AlertList.tsx
frontend/amundsen_application/static/js/components/Card/: styles.scss
frontend/amundsen_application/static/js/components/EditableSection/: index.tsx  styles.scss
frontend/amundsen_application/static/js/config/: config-default.ts  config-types.ts  config-utils.ts
frontend/amundsen_application/static/js/fixtures/: mockRouter.ts
frontend/amundsen_application/static/js/interfaces/: Resources.ts
frontend/instance/: sessions.db
search/search_service/proxy/: es_proxy_utils.py  es_proxy_v2.py
(+37 files in other folders)
